[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/ProgressingText.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 160.798

[node name="ProgressingText" type="RichTextLabel"]
show_behind_parent = true
margin_top = -8.0
margin_right = 144.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = false
theme = ExtResource( 1 )
visible_characters = 0
percent_visible = 0.0
text = "Press LEFT MOUSE BUTTON to swing your sword"
fit_content_height = true
scroll_active = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
text_speed = 0.03

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 64, 16 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
